ADD_EXECUTABLE(test_bundler_data test_bundler_data.cpp)
TARGET_LINK_LIBRARIES(test_bundler_data SfMFiles)

ADD_EXECUTABLE(test_pmvs_data test_pmvs_data.cpp)
TARGET_LINK_LIBRARIES(test_pmvs_data SfMFiles)

ADD_EXECUTABLE(test_bundler_camera test_bundler_camera.cpp)
TARGET_LINK_LIBRARIES(test_bundler_camera SfMFiles)

ADD_EXECUTABLE(test_utils test_utils.cpp)
TARGET_LINK_LIBRARIES(test_utils SfMFiles)

ADD_EXECUTABLE(test_io test_io.cpp)
TARGET_LINK_LIBRARIES(test_io SfMFiles)

ADD_EXECUTABLE(test_feature_descriptors test_feature_descriptors.cpp)
TARGET_LINK_LIBRARIES(test_feature_descriptors SfMFiles)
